Manh Comit fix DetermineController.java